--- a/home.html
+++ b/home.html
@@ -6,34 +6,34 @@
 </head>
 <body>
   <h1>Add something a new type of Health Insurance coverage!</h1>
-  <p><a href="addinsurance.html">Click here!</a></p>
+  <p><a href="/addinsurance/">Click here!</a></p>
   <h2>Add a new type of benefit!</h2>
-  <p><a href="addbenefit.html">Click here!</a></p>
+  <p><a href="/addbenefit/">Click here!</a></p>
   <h3>Add a new type of project status!</h3>
-  <p><a href="addstatus.html">Click here!</a></p>
+  <p><a href="/addstatus/">Click here!</a></p>
   <h4>Add a new address with ZIP code!</h4>
-  <p><a href="addaddress.html">Click here!</a></p>
+  <p><a href="/addaddress/">Click here!</a></p>
   <h5>Add a new job position!</h5>
-  <p><a href="addposition.html">Click here!</a></p>
+  <p><a href="/addposition/">Click here!</a></p>
   <h6>Add a new department!</h6>
-  <p><a href="adddepartment.html">Click here!</a></p>
+  <p><a href="/adddepartment/">Click here!</a></p>
   <h7>Add info for a new employee!</h7>
-  <p><a href="addemployee.html">Click here!</a></p>
+  <p><a href="/addemployee/">Click here!</a></p>
   <h8>Add a new employee benefit!</h8>
-  <p><a href="addbenefit.html">Click here!</a></p>
+  <p><a href="/addbenefit/">Click here!</a></p>
   <h9>Add a new project!</h9>
-  <p><a href="addproject.html">Click here!</a></p>
+  <p><a href="/addproject/">Click here!</a></p>
   <h10>Add a new role!</h10>
-  <p><a href="addrole.html">Click here!</a></p>
+  <p><a href="/addrole/">Click here!</a></p>
   <h11>Add new info about an employee and their project!</h11>
-  <p><a href="addempproj.html">Click here!</a></p>
+  <p><a href="/addempproj/">Click here!</a></p>
   <h12>Add a new employee assignment!</h12>
-  <p><a href="addassignment.html">Click here!</a></p>
+  <p><a href="/addassignment/">Click here!</a></p>
   <h13>Update a table!</h13>
-  <p><a href="update.html">Click here!</a></p>
+  <p><a href="/update/">Click here!</a></p>
   <h14>Delete from a table!</h14>
-  <p><a href="delete.html">Click here!</a></p>
+  <p><a href="/delete/">Click here!</a></p>
   <h15>Select a query!</h15>
-  <p><a href="query.html">Click here!</a></p>
+  <p><a href="/query/">Click here!</a></p>
 </body>
 </html>
