--- a/home.html
+++ b/home.html
@@ -20,7 +20,7 @@
   <h7>Add info for a new employee!</h7>
   <p><a href="/addemployee/">Click here!</a></p>
   <h8>Add a new employee benefit!</h8>
-  <p><a href="/addbenefit/">Click here!</a></p>
+  <p><a href="/addempbenefit/">Click here!</a></p>
   <h9>Add a new project!</h9>
   <p><a href="/addproject/">Click here!</a></p>
   <h10>Add a new role!</h10>
